Added parallax endless background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <img id="player" src="./images/player.png" alt="player sprite" />
+    <img id="player" src="./images/player.png" alt="sprite do jogador" />
+    <img id="layer1" src="./images/layer-1.png" alt="layer 1 do background" />
+    <img id="layer2" src="./images/layer-2.png" alt="layer 2 do background" />
+    <img id="layer3" src="./images/layer-3.png" alt="layer 3 do background" />
+    <img id="layer4" src="./images/layer-4.png" alt="layer 4 do background" />
+    <img id="layer5" src="./images/layer-5.png" alt="layer 5 do background" />
     <script type="module" src="./script/main.js"></script>
   </body>
 </html>
