Added 3 enemies sprites

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <img id="layer3" src="./images/layer-3.png" alt="layer 3 do background" />
     <img id="layer4" src="./images/layer-4.png" alt="layer 4 do background" />
     <img id="layer5" src="./images/layer-5.png" alt="layer 5 do background" />
+    <img src="/images/enemy_fly.png" alt="" id="enemy_fly" />
+    <img src="/images/enemy_plant.png" alt="" id="enemy_plant" />
+    <img src="/images/enemy_spider_big.png" alt="" id="enemy_spider_big" />
     <script type="module" src="./script/main.js"></script>
   </body>
 </html>
