--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img src="/images/enemy_fly.png" alt="" id="enemy_fly" />
     <img src="/images/enemy_plant.png" alt="" id="enemy_plant" />
     <img src="/images/enemy_spider_big.png" alt="" id="enemy_spider_big" />
+    <img src="./images/fire.png" alt="" id="fire" />
     <script type="module" src="./script/main.js"></script>
   </body>
 </html>
