--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <img src="/images/enemy_plant.png" alt="" id="enemy_plant" />
     <img src="/images/enemy_spider_big.png" alt="" id="enemy_spider_big" />
     <img src="./images/fire.png" alt="" id="fire" />
+    <img src="./images/boom.png" alt="" id="collisionAnimation" />
     <script type="module" src="./script/main.js"></script>
   </body>
 </html>
