Added lives sprite

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img src="/images/enemy_spider_big.png" alt="" id="enemy_spider_big" />
     <img src="./images/fire.png" alt="" id="fire" />
     <img src="./images/boom.png" alt="" id="collisionAnimation" />
+    <img src="./images/heart.png" alt="" id="lives" />
     <script type="module" src="./script/main.js"></script>
   </body>
 </html>
