--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <img src="./images/boom.png" alt="" id="collisionAnimation" />
     <img src="./images/heart.png" alt="" id="lives" />
     <script type="module" src="./script/main.js"></script>
+    <button id="fullScreenBtn">Tela cheia</button>
   </body>
 </html>
