--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <img src="./images/heart.png" alt="" id="lives" />
     <script type="module" src="./script/main.js"></script>
     <button id="fullScreenBtn">Tela cheia</button>
+    <button id="restartBtn">Reiniciar</button>
   </body>
 </html>
